istio-manifest/gateway-api.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: istio-gateway
spec:
  gatewayClassName: istio
  listeners:
  - name: http
    port: 80
    protocol: HTTP
    allowedRoutes:
      namespaces:
        from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: doctor-booking
spec:
  parentRefs:
  - name: istio-gateway
  rules:
  - matches:
    - path:
        type: Exact
        value: /doctor-booking
    - path:
        type: Exact
        value: /grand-oak
    - path:
        type: Exact
        value: /pine-valley
    backendRefs:
    - name: doctor-booking-service
      port: 80
