istio-manifest/gateway.yaml
apiVersion: networking.istio.io/v1
kind: Gateway
metadata:
  name: istio-gateway
spec:
  selector:
    istio: ingressgateway # Use Istio's ingress gateway
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1
kind: VirtualService
metadata:
  name: doctor-booking-service
spec:
  hosts:
  - "*"
  gateways:
  - istio-gateway
  http:
  - match:
    - uri:
        prefix: /doctor-booking
    - uri:
        prefix: /pine-valley
    - uri:
        prefix: /grand-oak
    route:
    - destination:
        host: doctor-booking-service
        port:
          number: 80
# ---
# apiVersion: networking.istio.io/v1beta1
# kind: VirtualService
# metadata:
#   name: grand-oak-service
# spec:
#   hosts:
#   - "*"
#   gateways:
#   - istio-gateway
#   http:
#   - match:
#     - uri:
#         prefix: /grand-oak
#     route:
#     - destination:
#         host: grandoakservice
#         port:
#           number: 80
# ---
# apiVersion: networking.istio.io/v1beta1
# kind: VirtualService
# metadata:
#   name: pine-valley-service
# spec:
#   hosts:
#   - "*"
#   gateways:
#   - istio-gateway
#   http:
#   - match:
#     - uri:
#         prefix: /pine-valley
#     route:
#     - destination:
#         host: pinevalleyservice
#         port:
#           number: 80
